# ts-analyzer

./: .gitignore  Cargo.toml  ai-usage.md  contributing.md  error-examples.ts  index.ts  license.md  readme.md
lua/ts-analyzer/: init.lua  runner.lua
src/: formatter.rs  main.rs  parser.rs  suggestion.rs  token_utils.rs
src/diagnostics/: suggestions.rs
src/error/: codes.rs  mod.rs
src/lsp/: proxy.rs
