[package]
name = "ts-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
ariadne = "0.6.0"
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "ts-analyzer"
path = "src/main.rs" 
